--- a/__setup/Dockerfile
+++ b/__setup/Dockerfile
@@ -31,15 +31,6 @@ ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 CMD ["/usr/bin/supervisord","-c","/etc/supervisor/conf.d/supervisord.conf"]
 
-
-
-
-RUN apt-get install -y r-base gdebi-core
-
-RUN wget https://download2.rstudio.org/rstudio-server-0.99.903-amd64.deb
-
-RUN gdebi -q rstudio-server-0.99.903-amd64.deb
-
 RUN apt-get install -y vim emacs
 
 
@@ -50,3 +41,6 @@ RUN echo "alias ll='ls -la -G'" >> /home/training/.profile
 RUN usermod -G training,www-data training
 
 
+RUN apt-get install -y r-base gdebi-core
+RUN wget https://download2.rstudio.org/rstudio-server-0.99.903-amd64.deb
+RUN gdebi -n rstudio-server-0.99.903-amd64.deb
