--- a/__setup/trinity_docker/Dockerfile
+++ b/__setup/trinity_docker/Dockerfile
@@ -1,9 +1,66 @@
 FROM ubuntu
 MAINTAINER Brian Haas (bhaas@broadinstitute.org)
-# with many thanks to Nicolas Delhomme (nicolas.delhomme@slu.se)
+# with many thanks to Nicolas Delhomme (nicolas.delhomme@slu.se) and Bastian Schiffthaler (bastian.schiffthaler@umu.se)
+
+
+## From base-r (https://github.com/rocker-org/rocker/blob/master/r-base/Dockerfile)
+
+RUN apt-get update \ 
+	&& apt-get install -y --no-install-recommends \
+		ed \
+		less \
+		locales \
+		vim-tiny \
+		wget \
+		ca-certificates \
+		fonts-texgyre \
+	&& rm -rf /var/lib/apt/lists/*
+
+## Configure default locale, see https://github.com/rocker-org/rocker/issues/19
+RUN echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen \
+	&& locale-gen en_US.utf8 \
+	&& /usr/sbin/update-locale LANG=en_US.UTF-8
+
+ENV LC_ALL en_US.UTF-8
+ENV LANG en_US.UTF-8
+
+## Now install R and littler, and create a link for littler in /usr/local/bin
+## Also set a default CRAN repo, and make sure littler knows about it too
+RUN apt-get update \
+	&& apt-get install -y --no-install-recommends \
+		littler \
+                r-cran-littler \
+		r-base \
+		r-base-dev \
+		r-recommended \
+        && echo 'options(repos = c(CRAN = "https://cran.rstudio.com/"), download.file.method = "libcurl")' >> /etc/R/Rprofile.site \
+        && echo 'source("/etc/R/Rprofile.site")' >> /etc/littler.r \
+	&& ln -s /usr/share/doc/littler/examples/install.r /usr/local/bin/install.r \
+	&& ln -s /usr/share/doc/littler/examples/install2.r /usr/local/bin/install2.r \
+	&& ln -s /usr/share/doc/littler/examples/installGithub.r /usr/local/bin/installGithub.r \
+	&& ln -s /usr/share/doc/littler/examples/testInstalled.r /usr/local/bin/testInstalled.r \
+	&& install.r docopt \
+	&& rm -rf /tmp/downloaded_packages/ /tmp/*.rds \
+	&& rm -rf /var/lib/apt/lists/*
+
+
+
+###################################
+## Now on to rest of workshop setup
+
 
 RUN apt-get update && apt-get install -y build-essential curl unzip apache2 supervisor \
-     default-jre wget git ftp nano python2.7-dev python-pip openssl openssh-server
+     default-jre wget git ftp nano python2.7-dev python-pip openssl openssh-server \
+     vim emacs
+
+
+RUN groupadd -g 2000 training && useradd -m -u 2000 -g 2000 training
+RUN echo 'training:training' | chpasswd
+RUN chsh -s /bin/bash training
+RUN echo "alias ll='ls -la -G'" >> /home/training/.profile
+RUN usermod -G training,www-data training
+
+
 
 
 WORKDIR /usr/local/src
@@ -14,10 +71,7 @@ WORKDIR /usr/local/src
 #########
 RUN git clone https://github.com/liftoff/GateOne/ && \
     cd GateOne && python setup.py install && \
-        python run_gateone.py --configure && cd ..
-
-
-
+    python run_gateone.py --configure && cd ..
 
 
 
@@ -31,24 +85,8 @@ ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 CMD ["/usr/bin/supervisord","-c","/etc/supervisor/conf.d/supervisord.conf"]
 
-RUN apt-get install -y vim emacs
 
 
-RUN groupadd -g 2000 training && useradd -m -u 2000 -g 2000 training
-RUN echo 'training:training' | chpasswd
-RUN chsh -s /bin/bash training
-RUN echo "alias ll='ls -la -G'" >> /home/training/.profile
-RUN usermod -G training,www-data training
+## install bioconductor packages:
 
-
-RUN locale-gen en_US.UTF-8
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US:en
-ENV LC_ALL en_US.UTF-8
-
-RUN apt-get install -y r-base gdebi-core sudo
-RUN wget https://download2.rstudio.org/rstudio-server-0.99.903-amd64.deb
-RUN gdebi -n rstudio-server-0.99.903-amd64.deb
-
-RUN echo "server-app-armor-enabled=0" >> /etc/rstudio/rserver.conf
-
+RUN Rscript -e 'source("http://bioconductor.org/biocLite.R");library(BiocInstaller); biocLite("edgeR", dep = TRUE)'
