--- a/__setup/singlecell_docker/Dockerfile
+++ b/__setup/singlecell_docker/Dockerfile
@@ -1,8 +1,9 @@
 FROM rocker/rstudio
 MAINTAINER Brian Haas (bhaas@broadinstitute.org)
 
+
 ## install bioconductor packages:
-RUN Rscript -e 'source("http://bioconductor.org/biocLite.R");library(BiocInstaller); biocLite("edgeR", dep = TRUE)'
+#RUN Rscript -e 'source("http://bioconductor.org/biocLite.R");library(BiocInstaller); biocLite("edgeR", dep = TRUE)'
 
 
 
